[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/objects/horseshoe.png" type="Texture" id=1]
[ext_resource path="res://assets/objects/apple.png" type="Texture" id=2]
[ext_resource path="res://assets/objects/antlers.png" type="Texture" id=3]
[ext_resource path="res://assets/objects/spray.png" type="Texture" id=4]
[ext_resource path="res://assets/objects/decorations.png" type="Texture" id=5]
[ext_resource path="res://deer.tscn" type="PackedScene" id=6]
[ext_resource path="res://desire.tscn" type="PackedScene" id=7]
[ext_resource path="res://act01.gd" type="Script" id=8]
[ext_resource path="res://desires.gd" type="Script" id=9]
[ext_resource path="res://assets/bckgrnd.jpg" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 51.9783, 40.055 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="main" type="Node2D"]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512, 344 )
texture = ExtResource( 10 )

[node name="deer" parent="." instance=ExtResource( 6 )]

[node name="acts" type="Node2D" parent="."]

[node name="act01" type="Area2D" parent="acts" groups=[
"activities",
]]
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="acts/act01"]
position = Vector2( 88, 536 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="acts/act01"]
position = Vector2( 88, 536 )
frames = SubResource( 2 )

[node name="act02" type="Area2D" parent="acts" groups=[
"activities",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="acts/act02"]
position = Vector2( 216, 536 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="acts/act02"]
position = Vector2( 216, 536 )
frames = SubResource( 3 )

[node name="act03" type="Area2D" parent="acts" groups=[
"activities",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="acts/act03"]
position = Vector2( 344, 536 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="acts/act03"]
position = Vector2( 344, 536 )
frames = SubResource( 4 )

[node name="act04" type="Area2D" parent="acts" groups=[
"activities",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="acts/act04"]
position = Vector2( 472, 536 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="acts/act04"]
position = Vector2( 472, 536 )
frames = SubResource( 5 )

[node name="act05" type="Area2D" parent="acts" groups=[
"activities",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="acts/act05"]
position = Vector2( 600, 536 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="acts/act05"]
position = Vector2( 600, 536 )
frames = SubResource( 6 )

[node name="desires" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="desire_test" parent="desires" instance=ExtResource( 7 )]
margin_left = 248.0
margin_top = 440.0
margin_right = 248.0
margin_bottom = 440.0
[connection signal="touched" from="deer" to="desires" method="_on_deer_touched"]
[connection signal="touched_end" from="deer" to="desires" method="_on_deer_touched_end"]
[connection signal="input_event" from="acts/act01" to="acts/act01" method="_on_act01_input_event"]
